--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iArchive 2</title>
-	<link rel="apple-touch-icon" href="/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-	<link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <title>Overgrown</title>
 </head>
 <body>
-<div class="container">
-    <h1 class="fade-in">Overgrown</h1>
-    <div class="hstack fade-in">
-        <div class="vstack">
-            <a href="InternalFirmwares.html" class="button">
-                <div>
-                    <div class="vstack">
-                        Dumps
-					<span>iPSW firmware version and a dump variation.</span>
-                </div>
-            </a>
-            <a href="NonUITut.html" class="button">
-                <div>
-                    <div class="vstack">
-                        Tutorial
-					<span>Tutorial how to install Overgrown firmware on your iDevice.</span>
-                </div>
-            </a>
-</div>
-    <script src="script.js"></script>
+    <div class="container fade-in">
+        <h1>Overgrown</h1>
+        
+        <div class="hstack">
+            <div class="column">
+                <h2>Column 1</h2>
+                <a href="#" class="button">Button 1</a>
+            </div>
+            <div class="column">
+                <h2>Column 2</h2>
+                <a href="#" class="button">Button 2</a>
+            </div>
+        </div>
+        
+        <div class="column-container">
+            <div class="column">
+                <h2>Column 3</h2>
+                <p>Some text goes here.</p>
+            </div>
+            <div class="column">
+                <h2>Column 4</h2>
+                <p>Some more text.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
