--- a/index.html
+++ b/index.html
@@ -12,24 +12,12 @@
         
         <div class="hstack">
             <div class="column">
-                <h2>Column 1</h2>
                 <a href="#" class="button">Button 1</a>
             </div>
             <div class="column">
-                <h2>Column 2</h2>
                 <a href="#" class="button">Button 2</a>
             </div>
-        </div>
-        
-        <div class="column-container">
-            <div class="column">
-                <h2>Column 3</h2>
-                <p>Some text goes here.</p>
-            </div>
-            <div class="column">
-                <h2>Column 4</h2>
-                <p>Some more text.</p>
-            </div>
+        </div
         </div>
     </div>
 </body>
